--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My CV</title>
+    <link rel="stylesheet" href="./style.css" />
+</head>
+<body>
+    <header>
+        <h3>Hello World</h3>
+        <p>I'm using github pages</p>
+    </header>
+
+    
+    <div class="about">
+
+    </div>
+
+    <footer>
+
+    </footer>
+</body>
+
+</html>
