added part of cv for testing

--- a/index.html
+++ b/index.html
@@ -7,19 +7,36 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <header>
-        <h3>Hello World</h3>
-        <p>I'm using github pages</p>
-    </header>
+    <section class="into">
+        <div class="intro-container">
+            <div class="column-left">
+                <img src="./photo.JPG" alt="my-photo" class="my-photo">
+            </div>
+            <div class="column-right">
+                <h1 class="name">Innokentii Mikhalevskii</h1>
+                <h3 class="job">Webentwickler mit 1 Jahr Erfahrung</h3>
+                <ul class="contact">
+                    <li>Salzburg Stadt, Salzburg, Üsterreich</li>
+                    <li>+43 660 961 2006</li>
+                    <li><a href="mailto:mikhal3vsky@gmail.com"></a>mikhal3vsky@gmail.com</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
-    
-    <div class="about">
 
-    </div>
+    <section class="about">
+        <div class="about-container">
+            <h2>Über mich</h2>
+            <p class="text">
+                Ich bin ein Student an der Universität Salzburg und ein Webentwickler mit großem Interesse für
+                Front-end- und Back-End-Entwicklung. Ich habe Erfahrung sowohl als Webentwickler als auch als
+                IT Administrator.
+            </p>
+        </div>
+    </section>
 
-    <footer>
 
-    </footer>
 </body>
 
 </html>
