pretty close to original cv

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1 class="name">Innokentii Mikhalevskii</h1>
                 <h3 class="job">Webentwickler mit 1 Jahr Erfahrung</h3>
                 <ul class="contact">
-                    <li>Salzburg Stadt, Salzburg, Üsterreich</li>
+                    <li>Salzburg Stadt, Salzburg, Österreich</li>
                     <li>+43 660 961 2006</li>
                     <li><a href="mailto:mikhal3vsky@gmail.com"></a>mikhal3vsky@gmail.com</li>
                 </ul>
@@ -34,114 +34,122 @@
                 IT Administrator.
             </p>
         </div>
-
-        <div class="experience">
-            <h2>Erfahrung</h2>
-            <div class="experience-container">
-                <div class="experience-element">
-                    <h3 class="experience-heading-left">Auto-Zusteller, Ninjas, Salzburg, Österreich </h3>
-                    <h3 class="experience-heading-right">Dec 2023 - jetzt</h3>
-                    <ul class="experience-list">
-                        <li>Zustellung von Essen, Paketen und Lebensmitteln</li>
-                        <li>Hilfe im Büro im Kundendienst und bei Verpackung, Streckenplanung</li>
-                    </ul>
-                </div>
-
-                <div class="experience-element">
-                    <h3 class="experience-heading-left">Assistenz & Systemadministrator, Kultural Bridge, Sankt Petersburg, Russia</h3>
-                    <h3 class="experience-heading-right">Sep 2021 - Jan 2022</h3>
-                    <ul class="experience-list">
-                        <li>Allgemeine Office-Management-Aufgaben und Bearbeitung des Schriftverkehrs</li>
-                        <li>Vorbereitung der Buchhaltungs- und Lohnverrechnungsunterlagen für den Steuerberater</li>
-                        <li>Kommunikation mit Behörden, Ämtern und externen Ansprechpartner:innen</li>
-                    </ul>
-                </div>
-
-                <div class="experience-element">
-                    <h3 class="experience-heading-left">Webentwickler, Rocont, Sankt Petersburg, Russland</h3>
-                    <h3 class="experience-heading-right">Sep 2020 - Jul 2021</h3>
-                    <ul class="experience-list">
-                        <li>Entwicklung einer voll funktionsfähigen Firmenwebsite</li>
-                        <li>Enge Zusammenarbeit mit erfahrenen Teamkollegen, UX/UI-Design und Firmenleiter</li>
-                        <li>Entwicklung von Fähigkeiten zur Fehlersuche und -behebung in schwierigen Momenten</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="education">
-            <h2>AUSBILDUNG</h2>
-            <div class="education-container">
-                <div class="education-el">
-                    <div class="course-date">
-                        <h3>Informatik</h3>
-                        <h3>Sep 2023 - jetzt</h3>
-                    </div>
-                    <h4 class="school">Universität Salzburg </h4>
-                </div>
-
-                <div class="education-el">
-                    <div class="course-date">
-                        <h3>Vorstudienlehrgang</h3>
-                        <h3>Feb 2022 - Jul 2023</h3>
-                    </div>
-                    <h4 class="school">Universität Salzburg</h4>
-                </div>
-
-                <div class="education-el">
-                    <div class="course-date">
-                        <h3>Python Webentwicklung Kursen</h3>
-                        <h3>Feb 2020 - Jun 2020</h3>
-                    </div>
-                    <h4 class="school">ITMO Universität</h4>
-                </div>
-
-                <div class="education-el">
-                    <div class="course-date">
-                        <h3>Elektrotechnik</h3>
-                        <h3>Sep 2017 - Jan 2020</h3>
-                    </div>
-                    <h4 class="school">Sankt Petersburg Electrotechnik Universität</h4>
-                </div>
-            </div>
-        </div>
-
-        <div class="skills">
-            <h3>FÄHIGKEITEN</h3>
-            <div class="skills-container">
-                <div class="skill-item">
-                    <h3>Technishe: </h3>
-                    <p>Javascript, Python, Typescript, Java, NextJS, React, Django, FireBase,
-                        HTML/CSS, MySQL, SQLite 3, Git, Bash, API, Postman, Insomnia
-                    </p>
-                </div>
-
-                <div class="skill-item">
-                    <h3>Büro: </h3>
-                    <p>Auftragsbearbeitung, Bürosoftware(Excel, Word usw.), Verfassen von Korrespondenz,
-                        Arbeit mit Geschäftsanwendungen(1C)
-                    </p>
-                </div>
-
-                <div class="skill-item">
-                    <h3>Sprachen: </h3>
-                    <p>Deutsch B2+, English C1, Russisch Muttersprache</p>
-                </div>
-
-                <div class="skill-item">
-                    <h3>Pet-Projekten: </h3>
-                    <p>Website mit NextJs+FireBase, Website mit Django+SQLite3, mehrere Bash
-                        und GUI Apps
-                    </p>
-                </div>
-            </div>
-        </div>
-
-
     </section>
 
+    <hr class="solid">
     
+    <section class="experience">
+        <div class="experience-container">
 
+            <h2>Erfahrung</h2>
+
+            <div class="experience-workplace">
+                <h3 class="experience-heading-left">Auto-Zusteller, Ninjas, Salzburg, Österreich </h3>
+                <h3 class="experience-heading-right">Dec 2023 - jetzt</h3>
+            </div>
+
+            <ul class="experience-list">
+                <li>Zustellung von Essen, Paketen und Lebensmitteln</li>
+                <li>Hilfe im Büro im Kundendienst und bei Verpackung, Streckenplanung</li>
+            </ul>
+
+
+            <div class="experience-workplace">
+                <h3 class="experience-heading-left">Assistenz & Systemadministrator, Kultural Bridge, Sankt Petersburg, Russia</h3>
+                <h3 class="experience-heading-right">Sep 2021 - Jan 2022</h3>
+            </div>
+
+            <ul class="experience-list">
+                <li>Allgemeine Office-Management-Aufgaben und Bearbeitung des Schriftverkehrs</li>
+                <li>Vorbereitung der Buchhaltungs- und Lohnverrechnungsunterlagen für den Steuerberater</li>
+                <li>Kommunikation mit Behörden, Ämtern und externen Ansprechpartner:innen</li>
+            </ul>
+
+            <div class="experience-workplace">
+                <h3 class="experience-heading-left">Webentwickler, Rocont, Sankt Petersburg, Russland</h3>
+                <h3 class="experience-heading-right">Sep 2020 - Jul 2021</h3>
+            </div>
+
+            <ul class="experience-list">
+                <li>Entwicklung einer voll funktionsfähigen Firmenwebsite</li>
+                <li>Enge Zusammenarbeit mit erfahrenen Teamkollegen, UX/UI-Design und Firmenleiter</li>
+                <li>Entwicklung von Fähigkeiten zur Fehlersuche und -behebung in schwierigen Momenten</li>
+            </ul>
+
+        </div>
+    </section>
+
+    <hr class="solid">
+
+    <section class="education">
+        <div class="education-container">
+            <h2>AUSBILDUNG</h2>
+            <div class="education-el">
+                <div class="course-date">
+                    <h3>Informatik</h3>
+                    <h3>Sep 2023 - jetzt</h3>
+                </div>
+                <h4 class="school">Universität Salzburg </h4>
+            </div>
+
+            <div class="education-el">
+                <div class="course-date">
+                    <h3>Vorstudienlehrgang</h3>
+                    <h3>Feb 2022 - Jul 2023</h3>
+                </div>
+                <h4 class="school">Universität Salzburg</h4>
+            </div>
+
+            <div class="education-el">
+                <div class="course-date">
+                    <h3>Python Webentwicklung Kursen</h3>
+                    <h3>Feb 2020 - Jun 2020</h3>
+                </div>
+                <h4 class="school">ITMO Universität</h4>
+            </div>
+
+            <div class="education-el">
+                <div class="course-date">
+                    <h3>Elektrotechnik</h3>
+                    <h3>Sep 2017 - Jan 2020</h3>
+                </div>
+                <h4 class="school">Sankt Petersburg Electrotechnik Universität</h4>
+            </div>
+        </div>
+    </section>
+
+    <hr class="solid">
+
+    <section class="skills">
+        <div class="skills-container">
+            <h2>FÄHIGKEITEN</h2>
+            <div class="skill-item">
+                <h3>Technishe: </h3>
+                <p><u>Javascript,</u> <u>Python,</u> Typescript, Java, NextJS, React, Django, FireBase,
+                    HTML/CSS, MySQL, SQLite 3, Git, Bash, API, Postman, Insomnia
+                </p>
+            </div>
+
+            <div class="skill-item">
+                <h3>Büro: </h3>
+                <p>Auftragsbearbeitung, Bürosoftware(Excel, Word usw.), Verfassen von Korrespondenz,
+                    Arbeit mit Geschäftsanwendungen(1C)
+                </p>
+            </div>
+
+            <div class="skill-item">
+                <h3>Sprachen: </h3>
+                <p>Deutsch B2+, English C1, Russisch Muttersprache</p>
+            </div>
+
+            <div class="skill-item">
+                <h3>Pet-Projekten: </h3>
+                <p>Website mit NextJs+FireBase, Website mit Django+SQLite3, mehrere Bash
+                    und GUI Apps
+                </p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
