new font and small fixes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <section class="into">
@@ -14,7 +17,7 @@
                 <img src="./photo.JPG" alt="my-photo" class="my-photo">
             </div>
             <div class="column-right">
-                <h1 class="name">Innokentii Mikhalevskii</h1>
+                <h1 class="name">INNOKENTII MIKHALEVSKII</h1>
                 <h3 class="job">Webentwickler mit 1 Jahr Erfahrung</h3>
                 <ul class="contact">
                     <li>Salzburg Stadt, Salzburg, Österreich</li>
@@ -28,7 +31,7 @@
 
     <section class="about">
         <div class="about-container">
-            <h2>Über mich</h2>
+            <h2>ÜBER MICH</h2>
             <p class="text">
                 Ich bin ein Student an der Universität Salzburg und ein Webentwickler mit großem Interesse für
                 Front-end- und Back-End-Entwicklung. Ich habe Erfahrung sowohl als Webentwickler als auch als
@@ -42,7 +45,7 @@
     <section class="experience">
         <div class="experience-container">
 
-            <h2>Erfahrung</h2>
+            <h2>ERFAHRUNG</h2>
 
             <div class="experience-workplace">
                 <h3 class="experience-heading-left">Auto-Zusteller, Ninjas, Salzburg, Österreich </h3>
@@ -126,8 +129,8 @@
             <h2>FÄHIGKEITEN</h2>
             <div class="skill-item">
                 <h3>Technishe: </h3>
-                <p><u>Javascript,</u> <u>Python,</u> Typescript, Java, NextJS, React, Django, FireBase,
-                    HTML/CSS, MySQL, SQLite 3, Git, Bash, API, Postman, Insomnia
+                <p><u>Javascript,</u> <u>Python,</u> Typescript, Java, <u>NextJS,</u> React, Django, <u>FireBase,</u>
+                    <u>HTML/CSS,</u> MySQL, SQLite 3, Git, Bash, API, Postman, Insomnia
                 </p>
             </div>
 
